# pychartjs

./: README.md  pyproject.toml
integration_tests/: app.py
integration_tests/templates/: index.html
pychartjs/: charts.py  colors.py  datasets.py  enums.py  options.py  plugins.py  scales.py
tests/: test_charts.py  test_colors.py  test_datasets.py  test_options.py  test_plugin.py  test_scales.py
